Open settings to help launching accessibility service

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -42,6 +42,14 @@
             android:entryValues="@array/theme_values"
             android:defaultValue="light"
             android:icon="@drawable/ic_launcher_foreground" />
+
+        <SwitchPreferenceCompat
+                android:key="accessibility_switch"
+                android:title="Accessibility"
+                android:summary="Turn on Accessibility Service"
+                android:defaultValue="false"
+                android:icon="@drawable/ic_launcher_foreground" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
