--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="Wakeup"
+                    android:text="SeniorPal"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:gravity="center_vertical"
